kubernetes/k8s-manifests/ingress/ingress-shopnow.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shopnow-ingress
  namespace: shopnow-demo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      # Frontend routes
      - path: /ghanshyam(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: frontend
            port:
              number: 80
      
      # Admin routes
      - path: /ghanshyam-admin(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: admin
            port:
              number: 80
      
      # Backend API routes
      - path: /ghanshyam/api(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: backend
            port:
              number: 5000
